# boost-object-list-processor

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml
client/: CMakeLists.txt
client/src/: main.cc
devdocker/: Dockerfile  Makefile  docker-compose.yaml
docker/: Dockerfile  Makefile
rest_api_service/: CMakeLists.txt  Dockerfile  Makefile
rest_api_service/include/: rest_api_handler.hpp
rest_api_service/src/: main.cpp  rest_api_handler.cpp
server/: CMakeLists.txt
server/db/: base_database_manager.hpp  postgres_database_manager.hpp
server/rest_api_service/include/: context.hpp  rest_api_handler.hpp  router.hpp  server.hpp  session.hpp
server/rest_api_service/include/aux/object_group_handler/: object_group_handler.hpp
server/rest_api_service/include/controllers/: object_controller.hpp
server/rest_api_service/include/serializers/: object_serializer.hpp
server/rest_api_service/include/services/: object_service.hpp
server/rest_api_service/src/: context.cpp  main.cpp  rest_api_handler.cpp  router.cpp  server.cpp
server/rest_api_service/src/aux/object_group_handler/: object_group_handler.cc
server/rest_api_service/src/controllers/: object_controller.cpp
server/rest_api_service/src/serializers/: object_serializer.cpp
server/rest_api_service/src/services/: object_service.cpp
shared/: CMakeLists.txt
shared/include/: object.hpp
shared/include/models/: object.hpp
shared/src/models/: object.cpp
sql/migration/: model.sql
src/: main.cc
src/client/src/: main.cc
src/server/include/: context.hpp
src/server/include/controllers/: object_controller.hpp
src/server/include/services/: object_service.hpp
src/server/rest_api_service/include/controllers/: object_controller.hpp
src/server/rest_api_service/include/serializers/: object_serializer.hpp
src/server/rest_api_service/include/services/: object_service.hpp
src/server/src/: main.cc  server.cc
src/server/src/aux/object_group_handler/: object_group_handler.cc
src/server/src/controllers/: object_controller.cc
src/server/src/serializers/: object_serializer.cc
src/server/src/services/: object_service.cc
src/shared/include/models/: object.hpp
src/shared/src/models/: object.cc
tests/: e2e_tests.sh
tests/delete_all_objects/: delete_all_objects.sh
tests/get_all_objects/: get_all_objects.sh  get_all_objects_group_by_distance.sh  get_all_objects_group_by_name.sh  get_all_objects_group_by_time.sh  get_all_objects_group_by_type.sh
tests/populate/: populate.py  populate.sh
